@@ -7,6 +7,7 @@ jalv (1.6.9) unstable; urgency=medium
   * Build Qt UI with -fPIC
   * Clean up and strengthen code
   * Clean up command line help output
+  * Fix Jack latency recomputation when plugin latency changes
   * Fix clashing command line options
   * Fix minor memory leaks
   * Reduce Jack process callback overhead
@@ -19,7 +20,7 @@ jalv (1.6.9) unstable; urgency=medium
   * Use fewer platform-specific APIs
   * Use portable zix filesystem API
 
- -- David Robillard <d@drobilla.net>  Fri, 15 Nov 2024 23:45:08 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 16 Nov 2024 01:37:46 +0000
 
 jalv (1.6.8) stable; urgency=medium
 
